--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "is-uuid": "^1.0.2",
     "morgan": "^1.10.0",
     "prisma": "^6.9.0",
-    "superstruct": "^2.0.2"
+    "superstruct": "^2.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -16,7 +17,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed": "node prisma/seed.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
