test:post,get 테스트확인

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon src/app.js",
     "start": "node app.js",
     "seed": "node prisma/seed.js"
   },
