--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "seed": "node prisma/seed.js"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "companySeed": "node prisma/companySeed.js"
   }
 }
